<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asus.tommysyamranata_1202153368_modul2.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/welcome"
        app:srcCompat="@drawable/welcome" />

    <TextView
        android:id="@+id/pilihanMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/pilihmenu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="110sp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/dinein"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/Dinein"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/takeaway"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/Takeaway"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <Button
        android:id="@+id/pesansekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/Pesansekarang"
        android:textColor="@android:color/holo_blue_dark" />
</LinearLayout>